feat: add files derrr

--- a/app.json
+++ b/app.json
@@ -37,6 +37,10 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "SUPABASE_URL": "your-supabase-url",
+      "SUPABASE_ANON_KEY": "your-supabase-anon-key"
     }
   }
 }
